@@ -24,6 +24,7 @@
 - [#758] Intersection Passmark - select which side is shown.
 - New math parser function "r2cm". Round to up to 1 decimal.
 - Two new shortcut sequences: Ctrl+PgDown and Ctrl+PgUp to switch to next and previous pattern piece.
+- [#765] New feature. Free curve mode.
 
 # Version 0.5.1
 - [#683] Tool Seam allowance's dialog is off screen on small resolutions.
